# Diablo

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  ROADMAP.html  ai-cartographie.json  ai-cartographie.schema.json  architecture.json  netlify.toml  package-lock.json  package.json  schema.json  sitemap.json  turbo.json
.claude/: launch.json
.codex/: hooks.json
.codex/hooks/: diablo-guard.mjs  diablo-guard.test.mjs
.github/workflows/: ci.yml
Mission/: CURRENT.md  D2RMM-D2RLoader-integration.md  ItemStatCost-BK-vers-TCP.md  PotionAutoPickup-portage-3.2.md  RingMercenaire.txt  WORKSTREAMS.json  advanced-item-tooltips-3.2.md  bulk-skill-point-allocation-3.2.md  charm-inventory-auras-3.2.md  configurable-larzuk-sockets-3.2.md  durability-loss-resistance-3.2.md  ed-min-max-jewel-fix-3.2.md  eezstreet-pluginpack-integration.md  extended-item-stats-3.2.md  floating-damage-portage-3.2.md  gamble-screen-limit-3.2.md  ground-item-label-limit-3.2.md  memory-patches-portage-3.2.json  no-ethereal-item-types-3.2.md  qty-display-issue-3.2.md  remote-stash-3.2.md  reverse-engineering-runtime-tooling.md  staffmod-skill-pools.reference.json  staffmods-portage-3.2.json  transmogrify-restoration-3.2.md  yupgoolg-hd-assets-audit.md
addons/ConfigurableCharsiReward/src/: CMakeLists.txt  plugin.cpp  plugin.rc  reward_state.hpp  reward_tests.cpp  target_policy.hpp
apps/admin/: index.html  package.json  vite.config.js
apps/hero-editor/: README.md  THIRD_PARTY_NOTICES.md  index.html  package.json  vite.config.js
apps/wiki/: index.html  package.json  vite.config.js
data-BK/hd/: texture_desc_cache.json
data-BKVince/: .gitattributes  .gitignore  ModernSharedStashSoftCoreV2.d2i  README.md
data-BKVince/BKVince.mpq/: BulkSkillPointAllocation.json  BulkSkillPointAllocation.strings.json  D2RPlugins.json  GambleScreenLimit.json  LarzukSockets.json  QtyDisplayIssue.json  modinfo.json
data-BKVince/bkdiablo.mpq/: modinfo.json
data-BKVince/d2rloader/: README.txt  metadata.json
data-BKVince/d2rloader/plugins/BulkSkillPointAllocation-src/: CMakeLists.txt  README.md  allocation_policy.hpp  allocation_policy_tests.cpp  plugin.cpp
data-BKVince/d2rloader/plugins/CharmInventoryAuras-src/: CMakeLists.txt  README.md  charm_aura_policy.hpp  plugin.cpp  policy_tests.cpp
data-BKVince/d2rloader/plugins/D2RL-Plugins-src/src/: CMakeLists.txt
data-BKVince/d2rloader/plugins/D2RL-Plugins-src/src/plugin-items/: CMakeLists.txt  items-main.cpp  items-private.h
data-BKVince/d2rloader/plugins/D2RL-Plugins-src/src/plugin-levels/: CMakeLists.txt  levels-main.cpp  levels-private.h
data-BKVince/d2rloader/plugins/D2RL-Plugins-src/src/plugin-misc/: CMakeLists.txt  misc-main.cpp
data-BKVince/d2rloader/plugins/D2RL-Plugins-src/src/plugin-quests/: CMakeLists.txt  plugin.rc  quests-main.cpp  quests-private.h
data-BKVince/d2rloader/plugins/DurabilityResistance-src/: CMakeLists.txt  README.md  durability_policy.hpp  plugin.cpp  policy_tests.cpp
data-BKVince/d2rloader/plugins/EnhancedDamageMinMaxFix-src/: CMakeLists.txt  README.md  correction_policy.hpp  correction_policy_tests.cpp  plugin.cpp
data-BKVince/d2rloader/plugins/FloatingDamage-src/: CMakeLists.txt  D3D12Hook.cpp  D3D12Hook.h  FloatingDamage.cpp  FloatingDamage.h  README.md  plugin.cpp  plugin.rc  resource.h
data-BKVince/d2rloader/plugins/LarzukSockets-src/: CMakeLists.txt  larzuk_policy.hpp  larzuk_policy_tests.cpp  plugin.cpp
data-BKVince/d2rloader/plugins/NoEtherealItemTypes-src/: CMakeLists.txt  README.md  item_type_policy.hpp  plugin.cpp  policy_tests.cpp
data-BKVince/d2rloader/plugins/PotionAutoPickup-src/: CMakeLists.txt  README.md  plugin.cpp  router.hpp  router_tests.cpp
data-BKVince/d2rloader/plugins/QtyDisplayIssue-src/: CMakeLists.txt  README.md  plugin.cpp  plugin.rc  quantity_tooltip.cpp  quantity_tooltip.hpp  quantity_tooltip_tests.cpp
data-BKVince/d2rloader/plugins/ReviveOverhaul-src/: CMakeLists.txt  README.md  plugin.cpp  policy_tests.cpp  revive_ai_policy.hpp
data-BKVince/d2rloader/plugins/Transmogrify-src/: CMakeLists.txt  README.md  plugin.cpp
data-TCP/D2RLAN/: memory_overrides.json
excel-vanilla/: weapons - Copy.txt  weapons.txt
netlify/functions/: api.mjs
reverse-engineering/: README.md  references.json
reverse-engineering/d2r-3.2.92777/: README.md  findings.md  known-rvas.json  workbench.json
schemas/: _categories.json  actinfo.json  armor.json  automagic.json  charstats.json  cubemain.json  difficultylevels.json  experience.json  gamble.json  gems.json  hireling.json  inventory.json  itemratio.json  itemstatcost.json  itemtypes.json  levels.json  lvlmaze.json  lvlprest.json  lvlwarp.json  magicprefix.json  magicsuffix.json  misc.json  missiles.json  monai.json  monlvl.json  monpreset.json  monprop.json  monseq.json  monstats.json  monstats2.json  monumod.json  npc.json  objects.json  overlay.json  properties.json  qualityitems.json  runes.json  setitems.json  sets.json  shrines.json  (+10 more)
scripts/: dev-server.js  generate-architecture.ps1  install-d2rmm-d2rloader.ps1  publish-tcp.ps1  reset-test-character.ps1
scripts/build-data/: audit-itemstatcost.js  cube-guide.js  gem-storage.js  gen-schemas.js  pandemonium-storage.js  tsv.js
scripts/checkpoint/: checkpoint.mjs  checkpoint.test.mjs
scripts/migrate-bkvince/: analyze-staffmods-3.2.py  apply-cell-deltas.js  apply-monstats-lots.js  audit-three-way.js  dump-d2r-process-image.py  generate-staffmod-patch.mjs  import-enhanced-effects.js  locate-memory-edits.py  locate_memory_edits_compat.py  match-memory-edit-functions.py  match-memory-edit-sites.py  match_memory_edit_functions_compat.py  port-mercenary-command.js  port-storage-bag.js  port-super-tk.js  rebuild-itemtypes.js  refine-memory-edit-candidates.py  validate-memory-patch-targets.mjs  validate-startup-references.js
scripts/reverse-engineering/: Build-D2RLoaderSdkContribution.ps1  Build-NativePlugins.ps1  Capture-D2RRuntime.ps1  Import-D2R32Ghidra.ps1  Initialize-D2R32Workbench.ps1  Invoke-D2R32Ghidra.ps1  Runtime-Tools.ps1  (+4 more)
wiki-template/: README.md  btdiablo-wiki-index.json
(+2437 files in other folders)
